--- a/css/base/_my-variables.scss
+++ b/css/base/_my-variables.scss
@@ -10,6 +10,8 @@ $light-red: #946563;
 $dark-blue: #465957;
 $light-blue: #698C89;
 
+$dark-turqois: #35968F;
+
 
 // Input
 $option-color: $light-blue;
