--- a/css/base/_forms.scss
+++ b/css/base/_forms.scss
@@ -1,78 +1,112 @@
 fieldset {
-  background-color: lighten($base-border-color, 10%);
-  border: $base-border;
-  margin: 0 0 $small-spacing;
-  padding: $base-spacing;
+	background-color: lighten($base-border-color, 10%);
+	border: $base-border;
+	margin: 0 0 $small-spacing;
+	padding: $base-spacing;
 }
 
 input,
 label,
 select {
-  display: block;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
+	display: block;
+	font-family: $base-font-family;
+	font-size: $base-font-size;
 }
 
 label {
-  font-weight: 600;
-  margin-bottom: $small-spacing / 2;
+	font-weight: 600;
+	margin-bottom: $small-spacing / 2;
 
-  &.required::after {
-    content: "*";
-  }
+	&.required::after {
+		content: "*";
+	}
 
-  abbr {
-    display: none;
-  }
+	abbr {
+		display: none;
+	}
 }
 
 #{$all-text-inputs},
 select[multiple=multiple],
 textarea {
-  background-color: $base-background-color;
-  border: $base-border;
-  border-radius: $base-border-radius;
-  box-shadow: $form-box-shadow;
-  box-sizing: border-box;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  margin-bottom: $base-spacing / 2;
-  padding: $base-spacing / 3;
-  transition: border-color;
-  width: 100%;
+	background-color: $base-background-color;
+	border: $base-border;
+	border-radius: $base-border-radius;
+	box-shadow: $form-box-shadow;
+	box-sizing: border-box;
+	font-family: $base-font-family;
+	font-size: $base-font-size;
+	margin-bottom: $base-spacing / 2;
+	padding: $base-spacing / 3;
+	transition: border-color;
+	width: 100%;
 
-  &:hover {
-    border-color: darken($base-border-color, 10%);
-  }
+	&:hover {
+		border-color: darken($base-border-color, 10%);
+	}
 
-  &:focus {
-    border-color: $action-color;
-    box-shadow: $form-box-shadow-focus;
-    outline: none;
-  }
+	&:focus {
+		border-color: $action-color;
+		box-shadow: $form-box-shadow-focus;
+		outline: none;
+	}
 }
 
 textarea {
-  resize: vertical;
+	resize: vertical;
 }
 
 input[type="search"] {
-  @include appearance(none);
+	@include appearance(none);
 }
 
 input[type="checkbox"],
 input[type="radio"] {
-  display: inline;
-  margin-right: $small-spacing / 2;
+	display: inline;
+	margin-right: $small-spacing / 2;
 }
 
 input[type="file"] {
-  padding-bottom: $small-spacing;
-  width: 100%;
+	padding-bottom: $small-spacing;
+	width: 100%;
 }
 
 select {
-  margin-bottom: $base-spacing;
-  max-width: 100%;
-  width: auto;
+	margin-bottom: $base-spacing;
+	width: 100%;
+
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+
+	border: 1px solid $light-gray;
+	background: white;
+	padding: 0 $small-spacing;
+	border-radius: $base-border-radius;
+
+	font-size: em(14);
+	font-weight: 200;
+
+	&:focus {
+		outline: none;
+	}
+}
+
+label.custom-select {
+	display: inline-block;
+	position: relative;
+	width: 100%;
+	line-height: $base-line-height + $base-line-height / 8;
+	height: $base-spacing + $base-spacing / 8;
+
+	&:after {
+		content:"";
+		width: 0;
+		height: 0;
+		border: $base-spacing / 4 solid transparent;
+		border-color: $gray transparent transparent transparent;
+		position: absolute;
+		top: .65em;
+		right: $base-spacing / 2 - $base-spacing / 8;
+	}
 }
