--- a/css/layout/_controls.scss
+++ b/css/layout/_controls.scss
@@ -173,6 +173,7 @@ section.filters {
 		text-transform: uppercase;
 		background: white;
 		border-bottom: 1px solid darken($super-light-gray, 5);
+		cursor: pointer;
 
 		> div {
 			margin: auto;
@@ -209,8 +210,7 @@ section.filters {
 		scrollbar-track-color: #eee;
 
 		.filter {
-			margin: auto;
-			margin-bottom: $base-spacing;
+			margin: $small-spacing auto;
 		}
 
 		display: none;
@@ -247,15 +247,23 @@ section.filters {
 		}
 	}
 
-	h3 {
+	h4 {
 		text-align: left;
 	}
 
-	select {
-		width: 100%;
+	#filter-age {
+		margin-bottom: $base-spacing * 0.5;
 	}
 
-	#filter-age {
-		margin-bottom: $base-line-height * .5em;
+	.age-value {
+		border: $base-border;
+		padding: 0 $small-spacing;
+		border-radius: $base-border-radius;
+		margin-bottom: $small-spacing;
+		text-transform: none;
+	}
+
+	#filter-age + div {
+		// margin-bottom: $base-spacing * 0.5;
 	}
 }
