--- a/css/base/_typography.scss
+++ b/css/base/_typography.scss
@@ -1,10 +1,10 @@
 body {
-  @include font-feature-settings("kern", "liga", "pnum");
-  -webkit-font-smoothing: antialiased;
-  color: $base-font-color;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  line-height: $base-line-height;
+	@include font-feature-settings("kern", "liga", "pnum");
+	-webkit-font-smoothing: antialiased;
+	color: $base-font-color;
+	font-family: $base-font-family;
+	font-size: $base-font-size;
+	line-height: $base-line-height;
 }
 
 h1,
@@ -13,46 +13,46 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $heading-font-family;
-  font-size: $base-font-size;
-  line-height: $heading-line-height;
-  margin: 0 0 $small-spacing;
+	font-family: $heading-font-family;
+	font-size: $base-font-size;
+	line-height: $heading-line-height;
+	margin: 0 0 $small-spacing;
 }
 
 p {
-  margin: 0 0 $small-spacing;
+	margin: 0 0 $small-spacing;
 }
 
 a {
-  color: $action-color;
-  text-decoration: none;
-  transition: color 0.1s linear;
+	color: $action-color;
+	text-decoration: none;
+	transition: color 0.1s linear;
 
-  &:active,
-  &:focus,
-  &:hover {
-    color: darken($action-color, 15%);
-  }
+	&:active,
+	&:focus,
+	&:hover {
+		color: darken($action-color, 15%);
+	}
 
-  &:active,
-  &:focus {
-    outline: none;
-  }
+	&:active,
+	&:focus {
+		outline: none;
+	}
 }
 
 hr {
-  border-bottom: 1px solid darken($super-light-gray, 5);
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  margin: $small-spacing 0;
-  clear: both;
+	border-bottom: 1px solid darken($super-light-gray, 5);
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	margin: $small-spacing 0;
+	clear: both;
 }
 
 img,
 picture {
-  margin: 0;
-  max-width: 100%;
+	margin: 0;
+	max-width: 100%;
 }
 //
 //
@@ -74,8 +74,12 @@ h3 {
 }
 
 h4 {
-	font-size: em(14);
+	// font-size: em(14);
+	// font-weight: 200;
+	// text-transform: uppercase;
+	font-size: em(10);
 	font-weight: 200;
+	color: $medium-gray;
 	text-transform: uppercase;
 }
 
