Proper height of map canvas
close #31

--- a/css/layout/_mapbox.scss
+++ b/css/layout/_mapbox.scss
@@ -1,6 +1,8 @@
 	#map-canvas {
 		z-index: 0;
-		height: 100%;
+		position: absolute;
+		bottom: 0;
+		height: calc(100% - #{$base-spacing * 4});
 		width: 100%;
 	}
 
