--- a/css/layout/_controls.scss
+++ b/css/layout/_controls.scss
@@ -258,6 +258,7 @@ section.filters {
 
 	.age-value {
 		border: $base-border;
+		background-color: white;
 		padding: 0 $small-spacing;
 		border-radius: $base-border-radius;
 		margin-bottom: $small-spacing;
