--- a/css/styles.css
+++ b/css/styles.css
@@ -1355,15 +1355,16 @@ header.intro {
   width: 100%; }
 
 #reset-view {
+  overflow: hidden;
   position: fixed;
   bottom: 50%;
   right: 9px;
   width: 28px;
   height: 28px;
+  line-height: 28px;
   background-color: white;
-  padding: 2px;
-  overflow: hidden;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.11); }
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.11);
+  border-radius: 2px; }
 
 .infobox {
   position: fixed;
