--- a/css/layout/_mapbox.scss
+++ b/css/layout/_mapbox.scss
@@ -7,15 +7,16 @@
 	}
 
 	#reset-view {
+		overflow: hidden;
 		position: fixed;
 		bottom: 50%;
 		right: 9px;
 		width: 28px;
 		height: 28px;
+		line-height: 28px;
 		background-color: white;
-		padding: 2px;
-		overflow: hidden;
 		box-shadow: 1px 1px 3px rgba(0,0,0,0.11);
+		border-radius: $base-border-radius;
 	}
 
 	.infobox {
