--- a/css/layout/_controls.scss
+++ b/css/layout/_controls.scss
@@ -113,7 +113,13 @@ section.filters {
 	top: $base-spacing * 4 + $base-spacing;
 	left: 0;
 	z-index: 13;
-	width: 20%;
+	width: 40%;
+	@include transition(width 0.2s);
+
+	@include media($large-screen) {
+		width: 20%;
+	}
+
 	text-align: center;
 	box-sizing: content-box;
 	padding: 0;
