--- a/css/layout/_controls.scss
+++ b/css/layout/_controls.scss
@@ -9,6 +9,7 @@ section.controls {
 	overflow: hidden;
 
 	.checkbox {
+		overflow: hidden;
 		@include span-columns(12);
 
 		@include media($large-screen) {
@@ -113,8 +114,16 @@ section.filters {
 	top: $base-spacing * 4 + $base-spacing;
 	left: 0;
 	z-index: 13;
-	width: 40%;
+	width: 100%;
 	@include transition(width 0.2s);
+
+	@include media($small-screen) {
+		width: 60%;
+	}
+
+	@include media($medium-screen) {
+		width: 40%;
+	}
 
 	@include media($large-screen) {
 		width: 20%;
